# sales-insight-agent

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  conftest.py  plan.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
agent/: __init__.py  graph.py  intent.py  prompts.py  state.py
data/: README.md  retrieval_relevance.json  sample_questions.json  sample_sales.csv
data/docs/: market_overview.md  product_strategy_brief.md  quarterly_sales_report.md
db/: loader.py
docs/: architecture.md  demo_script.md
docs/modeling/: retrieval_threshold.md
eval/: run_eval.py
rag/: __init__.py  ingest.py  retriever.py  vector_store.py
scripts/: build_data.py  build_vector_store.py
tests/: test_agent_graph.py  test_analyse_data.py  test_config_contract.py  test_data_contract.py  test_db.py  test_eval.py  test_filters.py  test_findings.py  test_forecast.py  test_intent.py  test_rag.py  test_search_documents.py  test_ui.py  test_visualise.py
tools/: __init__.py  analyse_data.py  data_loader.py  filters.py  forecast.py  search_documents.py  visualise.py
ui/: app.py
